--- a/src/components/widgets/Error404.astro
+++ b/src/components/widgets/Error404.astro
@@ -9,7 +9,24 @@
 			<p class="mt-4 mb-8 text-lg text-sw-coal-400 dark:text-sw-coal-100">
 				Não conseguimos encontrar nada para mostrar aqui.
 			</p>
-			<a rel="noopener noreferrer" href="#" class="btn ml-4">Início</a>
+			<a
+				rel="noopener noreferrer"
+				href="/"
+				class="inline-flex items-center p-3 rounded-md bg-sw-navy dark:bg-sw-flamingo ml-4"
+			>
+				<svg
+					class="mr-2 w-6 h-6"
+					xmlns="http://www.w3.org/2000/svg"
+					preserveAspectRatio="xMidYMid meet"
+					viewBox="0 0 24 24"
+				>
+					<path
+						fill="currentColor"
+						d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
+					></path>
+				</svg>
+				Voltar ao início
+			</a>
 		</div>
 	</div>
 </section>
