--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,67 +1,68 @@
 ---
-import { AstroSeo } from "@astrolib/seo"
-import { GoogleAnalytics } from "@astrolib/analytics"
-
+import { AstroSeo } from '@astrolib/seo';
+import { GoogleAnalytics } from '@astrolib/analytics';
 import { getImage } from '@astrojs/image';
 
-import defaultImageSrc from 'public/sw_main.png';
-
 import { SITE } from '@/config.mjs';
+import { MetaSEO } from '@/metaseo';
+
 import Fonts from '@atoms/Fonts.astro';
 
-// TODO: PEGAR O HERO DAS PÁGINAS
-const { src: defaultImage } = await getImage({
-	src: 'meta_main.png',
-	width: 1200,
-	height: 628,
-});
+export interface Props extends MetaSEO {
+	dontUseTitleTemplate?: boolean;
+}
+
+// const defaultImage = SITE.defaultImage
+// 	? (
+// 			await getImage({
+// 				src: SITE.defaultImage,
+// 				width: 1200,
+// 				height: 628
+// 			})
+// 	  ).src
+// 	: '';
+
 const {
 	title = SITE.name,
 	description = SITE.description,
 	image: _image = defaultImage,
 	canonical,
 	noindex = false,
+
 	nofollow = false,
+
 	ogTitle = title,
 	ogType = 'website',
-} = Astro.props;
-const image = 'meta_main.png'
+} = Astro.props as MetaSEO;
 ---
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
-<!-- TODO PEGAR O HERO DAS PÁGINAS -->
 <AstroSeo
 	title={title}
 	description={description}
-
-	canonical={canonical}
-	noindex={noindex}
+	canonical={String(canonical)}
 	nofollow={nofollow}
-
 	openGraph={{
-		url: canonical,
+		url: String(canonical),
 		title: ogTitle,
 		description: description,
 		type: ogType,
-		images: image
-			? [
-					{
-						url: image.toString(),
-						alt: ogTitle,
-					},
-			  ]
-			: undefined,
+		// images: image
+		// 	? [
+		// 			{
+		// 				url: image,
+		// 				alt: ogTitle,
+		// 			},
+		// 	  ]
+		// 	: undefined,
 		// site_name: 'SiteName',
 	}}
-	twitter={{
-		// handle: '@handle',
-		// site: '@site',
-		cardType: image ? 'summary_large_image' : undefined,
-	}}
 />
+
+<Fonts />
 
 <!-- Google Site Verification -->
 {SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
